syntax = "proto3";

import "user/entities/user.entity.proto";

message UserCreatedEvent {
   User user = 1;
}
