syntax = "proto3";

import "user/entities/user.entity.proto";

message UserDeletedEvent {
   User user = 1;
}
